csv upload is working with csv-parser -- next step is linking to the sql database -- needed to remove blanks from the bug csv to get this to read properly

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "Fgsfds!22fgsfds",
-    "database": "exampledb",
+    "password": null,
+    "database": "fieldPet_db",
     "host": "localhost",
     "dialect": "mysql"
   },
