--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^2.3.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
