changed login form to bug form

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "Chandler9504Bing",
     "database": "fieldPet_db",
     "host": "localhost",
     "dialect": "mysql"
