--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
+    "jason-server": "^2.0.22",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.6",
     "sequelize-cli": "^5.4.0"
