Pictures resized and img elements changed to div because materialize is a nightmare.

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Fgsfds!22fgsfds",
+    "password": null,
     "database": "fieldPet_db",
     "host": "localhost",
     "dialect": "mysql"
