--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "node-handlebars-boilerplate",
   "version": "1.0.0",
-  "description": "Project 2 Starter",
+  "description": "fieldPET",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "lint": "eslint --quiet .",
-    "fix": "eslint --fix .",
-    "seed": "node scripts/seedDB.js",
-    "test": "npm run lint && cross-env NODE_ENV=test mocha -u tdd --reporter spec --exit"
+    "seed": "node scripts/seedDB.js"
   },
   "license": "ISC",
   "dependencies": {
@@ -16,10 +13,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
-    "jason-server": "^2.0.22",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.6",
     "sequelize-cli": "^5.4.0"
-  },
-  "devDependencies": {}
+  }
 }
